@@ -54,7 +54,7 @@ from bzrlib.symbol_versioning import (
 
 class TestBranch(TestCaseWithBranch):
 
-    def test_append_revisions(self):
+    def test_append_revision(self):
         # note that append_revision is now deprecated; new code should call
         # set_last_revision_info instead.
         wt = self.make_branch_and_tree('tree')
