@@ -3,7 +3,10 @@ IN DEVELOPMENT
   API CHANGES:
 
    * ``Branch.append_revision`` is deprecated; please use 
-     ``Branch.set_last_revision_info`` instead.
+     ``Branch.set_last_revision_info`` instead.  ``append_revision`` 
+     previously raised ``NotLeftParentDescendant`` in some situations 
+     on some branches; that is no longer part of the contract and 
+     that exception is deprecated.  (Martin Pool)
 
 IN DEVELOPMENT
 
